--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ DB_USERNAME=url_previewdb
 DB_HOST=db4free.net
 DB_LANG=mysql
 DB_PASS=url_previewdb
-SERVER_BASE_URL=http://localhost:3000
+SERVER_BASE_URL=https://linkview-be.onrender.com
 SALT_ROUNDS=5
 JWT_SECRETE_KEY=ed75bf4d674fbf0ace75
